# Embedded-Linux

CppIntermediateProject/: CMakeLists.txt
CppIntermediateProject/Design/: max.puml
CppIntermediateProject/Test/: CMakeLists.txt  CustomMathTest.cpp
CppIntermediateProject/inc/: MathLib.hpp
CppIntermediateProject/src/: Application.cpp
Development_of_Numeric_Library_in_Modern_Cpp/Design/: min.puml
inc/: MathLib.hpp
shell_Scripting/Task1/: organize_files.sh
shell_Scripting/Task2/: Real_Time_Process_Monitouring.sh
